force-app/main/default/objects/Employee_Productivity__c/Employee_Productivity__c.object-meta.xml
<CustomObject>
    <label>Employee Productivity</label>
    <nameField>
        <label>Employee Productivity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Productivity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>