force-app/main/default/objects/Employee_Productivity__c/fields/Absence_Time_Sum_All__c.field-meta.xml
<CustomField>
    <fullName>Absence_Time_Sum_All__c</fullName>
    <label>Absence Time Sum All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>