force-app/main/default/objects/Employee_Productivity__c/fields/Actual_Work_Minutes_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Actual_Work_Minutes_Time_Card__c</fullName>
    <label>Actual Work Minutes Time Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>