force-app/main/default/objects/Employee_Productivity__c/fields/Articles_Created__c.field-meta.xml
<CustomField>
    <fullName>Articles_Created__c</fullName>
    <label>Articles Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>