force-app/main/default/objects/Employee_Productivity__c/fields/Articles_Linked__c.field-meta.xml
<CustomField>
    <fullName>Articles_Linked__c</fullName>
    <label>Articles Linked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>