force-app/main/default/objects/Employee_Productivity__c/fields/Available_Work_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Available_Work_Minutes__c</fullName>
    <label>Available Work Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>