force-app/main/default/objects/Employee_Productivity__c/fields/Available_Work_Minutes_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Available_Work_Minutes_Time_Card__c</fullName>
    <label>Available Work Minutes Time Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>