force-app/main/default/objects/Employee_Productivity__c/fields/Bereavement_Time__c.field-meta.xml
<CustomField>
    <fullName>Bereavement_Time__c</fullName>
    <label>Bereavement Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>