force-app/main/default/objects/Employee_Productivity__c/fields/Case_Activity_by_Day__c.field-meta.xml
<CustomField>
    <fullName>Case_Activity_by_Day__c</fullName>
    <label>Case Activity by Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>