force-app/main/default/objects/Employee_Productivity__c/fields/Case_Events__c.field-meta.xml
<CustomField>
    <fullName>Case_Events__c</fullName>
    <label>Case Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>