force-app/main/default/objects/Employee_Productivity__c/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Team</label>
    <referenceTo>Case_Team__c</referenceTo>
    <relationshipLabel>Employee Productivity</relationshipLabel>
    <relationshipName>Employee_Productivity</relationshipName>
    <type>Lookup</type>
</CustomField>