force-app/main/default/objects/Employee_Productivity__c/fields/Case_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Work_Time__c</fullName>
    <label>Case Work Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>