force-app/main/default/objects/Employee_Productivity__c/fields/Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Cases_Opened__c</fullName>
    <label>Cases Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>