force-app/main/default/objects/Employee_Productivity__c/fields/Closed_Cases_By_Day__c.field-meta.xml
<CustomField>
    <fullName>Closed_Cases_By_Day__c</fullName>
    <label>Closed Cases By Day</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>