force-app/main/default/objects/Employee_Productivity__c/fields/Employee_Time_In_Office__c.field-meta.xml
<CustomField>
    <fullName>Employee_Time_In_Office__c</fullName>
    <label>Employee Time In Office</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>