force-app/main/default/objects/Employee_Productivity__c/fields/Engineering_Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Cases_Opened__c</fullName>
    <label>Engineering Cases Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>