force-app/main/default/objects/Employee_Productivity__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <description>The Mexico support team works in several shifts which vary by number of hours and times worked each day. The utilization calculation and time entry does not currently account for this. To address this we introduced this field. Case - #02217020. Applicable for All business units. This will include weekend effort also.</description>
    <label>Hours Worked</label>
    <precision>9</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>