force-app/main/default/objects/Employee_Productivity__c/fields/In_Lieu_Days_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Lieu_Days_Time__c</fullName>
    <label>In Lieu Days Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>