force-app/main/default/objects/Employee_Productivity__c/fields/Jury_Duty_Time__c.field-meta.xml
<CustomField>
    <fullName>Jury_Duty_Time__c</fullName>
    <label>Jury Duty Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>