force-app/main/default/objects/Employee_Productivity__c/fields/Non_Absence_Time__c.field-meta.xml
<CustomField>
    <fullName>Non_Absence_Time__c</fullName>
    <label>Non Absence Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>