force-app/main/default/objects/Employee_Productivity__c/fields/Non_Case_Time_TC_Subtractors__c.field-meta.xml
<CustomField>
    <fullName>Non_Case_Time_TC_Subtractors__c</fullName>
    <label>Non Case Time TC Subtractors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>