force-app/main/default/objects/Employee_Productivity__c/fields/Personal_Time__c.field-meta.xml
<CustomField>
    <fullName>Personal_Time__c</fullName>
    <label>Personal Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>