force-app/main/default/objects/Employee_Productivity__c/fields/Professional_Services_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Work_Time__c</fullName>
    <label>Professional Services Work Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>