force-app/main/default/objects/Employee_Productivity__c/fields/Tech_Name__c.field-meta.xml
<CustomField>
    <fullName>Tech_Name__c</fullName>
    <formula>Case_Team__r.User__r.FirstName + &quot; &quot; + Case_Team__r.User__r.LastName + &quot; - &quot; + TEXT(Case_Team__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech Name</label>
    <type>Text</type>
</CustomField>