force-app/main/default/objects/Employee_Productivity__c/fields/Time_Card_Detail__c.field-meta.xml
<CustomField>
    <fullName>Time_Card_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Card Detail</label>
    <referenceTo>Time_Card_Details__c</referenceTo>
    <relationshipLabel>Employee Productivity</relationshipLabel>
    <relationshipName>Employee_Productivity</relationshipName>
    <type>Lookup</type>
</CustomField>