force-app/main/default/objects/Employee_Productivity__c/fields/Total_Cases_Worked_On__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases_Worked_On__c</fullName>
    <label>Total Cases Worked On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>