force-app/main/default/objects/Employee_Productivity__c/fields/Utilization_Rate_Overall__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Rate_Overall__c</fullName>
    <formula>/*IF
(
Employee_Time_In_Office__c = 0,
0,
(Case_Work_Time__c / Employee_Time_In_Office__c)
)*/

If
(Case_Work_Time__c =0,
0,
Case_Work_Time__c/2250
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Rate (Pure Case Time Only)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>