force-app/main/default/objects/Employee_Productivity__c/fields/Utilization_Rate_Overall_Sum__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Rate_Overall_Sum__c</fullName>
    <label>Utilization Rate (Pure Case Time) Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>