force-app/main/default/objects/Employee_Productivity__c/fields/Utilization_Work_Minutes_Time_Card__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Work_Minutes_Time_Card__c</fullName>
    <formula>/*If ( Employee_Time_In_Office__c &gt;0 , (Case_Work_Time__c + Non_Absence_Time__c )/ Employee_Time_In_Office__c,0)*/

IF 
( 
Employee_Time_In_Office__c = 0, 
0, 
((Case_Work_Time__c + Non_Case_Time_TC_Subtractors__c - Absence_Time__c)/ 2250) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Work Minutes Time Card</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>