force-app/main/default/objects/Employee_Productivity__c/fields/Utilization_Work_Minutes_Time_Card_Sum__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Work_Minutes_Time_Card_Sum__c</fullName>
    <label>Utilization Work Minutes Time Card Sum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>