force-app/main/default/objects/Employee_Productivity__c/fields/Vacation_Time__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Time__c</fullName>
    <label>Vacation Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>