force-app/main/default/objects/Employee_Productivity__c/fields/Week_Begin__c.field-meta.xml
<CustomField>
    <fullName>Week_Begin__c</fullName>
    <label>Week Begin</label>
    <type>Date</type>
</CustomField>